# Samyuti-2026

./: .env  .env.example  .gitignore  README.md  run.sh
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: audio.py  chant.py  evaluate.py  main.py  models.py  tts.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AudioVisualizer.tsx
frontend/src/components/ui/: Card.tsx  GradientButton.tsx  Slider.tsx  Toast.tsx  Toggle.tsx
frontend/src/lib/: api.ts
